--- a/src/app/contact-create/contact-create.component.html
+++ b/src/app/contact-create/contact-create.component.html
@@ -2,20 +2,19 @@
     <span>Novo contatos</span>
 </mat-toolbar>
 
-<div class="form">
+<form [formGroup]="contactForm" class="form" (ngSubmit)="createContact()">
     <mat-form-field appearance="standard">
         <mat-label>Nome</mat-label>
-        <input matInput>
+        <input matInput formControlName="name">
     </mat-form-field>
 
     <mat-form-field appearance="standard">
         <mat-label>Telefone</mat-label>
-        <input matInput>
+        <input matInput formControlName="phone">
     </mat-form-field>
-
-</div>
-
-<div class="actions">
-    <button routerLink="/contacts" mat-raised-button>Voltar para lista</button>
-    <button type="submit" mat-raised-button color="primary">Criar</button>
-</div>
+    
+    <div class="actions">
+        <a routerLink="/contacts" mat-raised-button>Cancelar</a>
+        <button type="submit" mat-raised-button color="primary" [disabled]="contactForm.invalid">Criar</button>
+    </div>
+</form>
